# DOPP_WS24

./: .gitignore  README.md  conda_env.yml  data_sources.txt  pyproject.toml
notebooks/: Consolidated.ipynb  InnovationAnalysis.ipynb  WIPO_GII.ipynb  read_gii.ipynb  temp.ipynb
scripts/: model_development.py
