[project]
name = "dopp-ws24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "eurostat>=1.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "networkx>=3.1",
    "numpy>=1.24.4",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pip>=25.0",
    "pycountry>=24.6.1",
    "requests>=2.32.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.1",
    "transformers>=4.46.3",
    "wget>=3.2",
]
